# overhead

./: .gitignore  LICENSE  README.rst  README.rts  appmap.yml  overhead-0.6.7-py3-none-any.whl  overhead-0.6.9-py3-none-any.whl  overhead-0.7.2-py3-none-any.whl  overhead-0.7.7-py3-none-any.whl  pyproject.toml  requirements.txt  setup.py
overhead/: README.rst  __init__.py  dictoh.py  imgoh.py  midioh.py  netoh.py  requirements.txt  speechoh.py  stringoh.py  toolboxoh.py  videooh.py  visualizatioh.py
overhead.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
overhead/aioh/: CODEX_CONFIG.py  SomCudaDriver.py  __init__.py  _kerttulibot_chatroom_1_temp.txt  _telegram_bot_main.py  _telegram_bots.py  _telegram_chat.py  _telegram_chatter_professor.py  _telegram_rawapibot.py  _telegram_text_bot.py  appmap.yml  codex_chat_helpers.py  codex_class.py  image_batched.py  kerttulibot_chatroom_1.txt  kerttulibot_chatroom_2.txt  kerttulibot_chatroom_3.txt  model_seq_ann.py  telegram_async_original.py  telegram_async_template.py  telegram_bot_async_main.py  telegram_bot_simple.py  telegram_chatmember_bot.py  telegram_json.py  telegram_kerttulibot.py  telegram_mini_template.py  test.py  test_me.py
overhead/cryptooh/: __init__.py  apps.py
overhead/datascience_tools/: DistributionPlotter.py  MyImageDataset.py  OpenGLcanvas.py  utils.py
overhead/opengloh/: __init__.py
overhead/opengloh/shaders/: basic_shader_old.glsl  color_hsv_analysis_split.glsl  function_drawing.glsl
