import = {"setuptools.setup" = "setuptools.find_packages"}

#setup()

# DYNAMIC
#[project]
#name = "overhead"
#dynamic = ["0.6.7", "readme"]


####


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "overhead"
version = "0.6.9"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["one", "two"]
license = {text = "LICENSE"}
classifiers = [
    "Framework :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
# dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["./*/"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


# [tool.setuptools]
# packages = ["my_package"]


#After building your package, you can have a look if all the files are correct (nothing missing or extra), by running the following commands:
#
#tar tf dist/*.tar.gz
#unzip -l dist/*.whl
